--- a/Public/adminlogin.css
+++ b/Public/adminlogin.css
@@ -13,17 +13,18 @@ body {
 }
 .login-div {
   width: 100%;
-  background-image: url(image/unsplash_lZHLbe66yfI.svg);
   height: 100vh;
   display: flex;
   justify-content: center;
   align-items: center;
   background-size: cover;
   background-repeat: no-repeat;
+  background: linear-gradient(180deg,#3E8076, #7FC8A9);
+
 }
 .login-box {
-  width: 550px;
-  height: 600px;
+  width: 400px;
+  height: fit-content;
   border-radius: 24px;
   opacity: 0;
   transform: scale(0.9); /* Start slightly smaller */
@@ -32,7 +33,8 @@ body {
   flex-direction: column;
   justify-content: center;
   align-items: center;
-  gap: 52px;
+  gap: 38px;
+  padding: 20px;
   animation: fadeInScale 1.2s ease-in forwards; /* Add animation */
 }
 
@@ -71,7 +73,7 @@ body {
 .input-div {
   display: flex;
   flex-direction: column;
-  width: 80%;
+  width: 100%;
   box-sizing: border-box;
 }
 input {
@@ -79,6 +81,7 @@ input {
   padding: 10px;
   border: 1px solid #00000080;
   background-color: transparent;
+  box-sizing: border-box;
 }
 form {
   width: 100%;
@@ -93,16 +96,16 @@ form {
   text-align: center;
   display: flex;
   flex-direction: column;
-  gap: 33px;
+  gap: 10px;
 }
 .title h1 {
   font-family: Inter;
-  font-size: 40px;
+  font-size: 24px;
   font-weight: 700;
 }
 .title p {
   font-family: PT Serif;
-  font-size: 24px;
+  font-size: 20px;
   font-weight: 400;
 }
 label,
@@ -139,6 +142,10 @@ button.loading {
 button.loading .spinner {
   display: inline-block;
 }
+
+.hidden {
+  display: none;
+}
 .spinner {
   width: 16px;
   height: 16px;
@@ -155,4 +162,14 @@ button.loading .spinner {
   100% {
     transform: rotate(360deg);
   }
+}
+@media screen  and (max-width: 720px){
+  .title h1{
+    font-size: 24px;
+  }
+  .login-div{
+    padding: 20px 10px;
+    box-sizing: border-box;
+  }
+  
 }
