--- a/Public/login.css
+++ b/Public/login.css
@@ -1,31 +1,96 @@
 @import url("https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&family=Irish+Grover&family=PT+Sans:ital,wght@0,400;0,700;1,400;1,700&display=swap");
 body {
   width: 100%;
-  height: fit-content;
+  height: 100vh;
   padding: 0;
   border: 0;
   margin: 0;
+  position: relative;
 }
 * {
   padding: 0;
   margin: 0;
   border: 0;
 }
+/* Full-screen loading overlay */
+.preloader {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background: #e0eae8;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  z-index: 1000;
+  transition: opacity 0.5s ease-out;
+}
+
+/* Loader Animation */
+.spin {
+  width: 50px;
+  height: 50px;
+  border: 5px solid rgba(62, 128, 118, 0.3);
+  border-top: 5px solid #3E8076;
+  border-radius: 50%;
+  animation: spin 1s linear infinite;
+}
+
+@keyframes spin {
+  0% {
+    transform: rotate(0deg);
+  }
+  100% {
+    transform: rotate(360deg);
+  }
+}
 main {
   width: 100%;
-  height: fit-content;
   background-color: #e0eae8;
+  height: 100%;
+}
+.main-div{
+  width: 100%;
+  height: 100%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  box-sizing: border-box;
 }
 .login-cointainer {
-  width: 967px;
-  height: 600px;
-  padding: 8px;
-  padding-top: 57px;
+  background: #fff;
+  padding: 20px;
+  border-radius: 8px;
+  box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+  width: 450px;
+  height: fit-content;
+  padding: 30px;
   gap: 36px;
   opacity: 0px;
   margin: auto;
+  opacity: 0;
+  transform: scale(0.1);
+  animation: zoomIn 4s ease-out forwards;
 }
-
+@keyframes zoomIn {
+  0% {
+      opacity: 0;
+      transform: scale(0.1);
+  }
+  100% {
+      opacity: 1;
+      transform: scale(1);
+  }
+}
+.backArrow {
+  position: absolute;
+  top: 40px;
+  left: 40px;
+}
+.backArrow img {
+  width: 40px;
+}
 .title {
   gap: 0px;
   opacity: 0px;
@@ -35,34 +100,31 @@ main {
 }
 .title h1 {
   font-family: "Inter", sans-serif;
-  font-size: 40px;
+  font-size: 20px;
   font-weight: 700;
-  line-height: 48.41px;
+  line-height: 28.41px;
   text-align: center;
-  padding-bottom: 36px;
+  padding-bottom: 16px;
 }
 .title p {
   font-family: "PT Sans", sans-serif;
-  font-size: 24px;
+  font-size: 18px;
   font-weight: 700;
   line-height: 31.8px;
   text-align: center;
-  padding-bottom: 30px;
-  margin-bottom: 24px;
+  padding-bottom: 10px;
 }
 form {
   display: flex;
   flex-direction: column;
   width: 100%;
-  padding-left: 24px;
-  padding-right: 24px;
+  padding: 24px;
   box-sizing: border-box;
-  padding-top: 40px;
 }
 .login-details {
   display: flex;
   flex-direction: column;
-  gap: 2px;
+  gap: 20px;
 }
 .login-details label {
   font-family: "Inter", sans-serif;
@@ -74,9 +136,12 @@ form {
   text-decoration-skip-ink: none;
 }
 .login-details input {
-  height: 48px;
+  width: 100%;
+  height: 40px;
   padding: 10px;
   border: 1px solid #000000;
+  display: flex;
+  box-sizing: border-box;
 }
 .checkbox-container label {
   font-family: "Inter", sans-serif;
@@ -102,12 +167,15 @@ form {
 }
 .submit-btn {
   padding-top: 36px;
-  width: 297px;
-  height: 76px;
+  width: 100%;
+  height: fit-content;
   gap: 12px;
   opacity: 0px;
   margin: auto;
   text-align: center;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
 }
 .signup {
   display: flex;
@@ -136,9 +204,9 @@ form {
   height: fit-content;
   display: flex;
   align-items: center;
-  padding: 10px;
+  padding: 6px;
   gap: 6px;
-  border-radius: 20px;
+  border-radius: 12px;
   opacity: 0px;
   background: #191919;
   color: #ffff;
@@ -173,12 +241,7 @@ form {
     transform: rotate(360deg);
   }
 }
-.image-div {
-  width: 100%;
-}
-.image-div img{
-  width: 100%;
-}
+
 #toast-container {
   position: fixed;
   top: 20px;
@@ -188,7 +251,7 @@ form {
 
 /* Toast */
 .toast {
-  font-family: inter;
+   font-family: "Inter", sans-serif;;
   position: relative;
   padding: 12px 20px;
   margin-bottom: 10px;
@@ -236,75 +299,36 @@ form {
   transition: width 5s linear; /* 5 seconds animation */
 }
 
-@media screen and (max-width: 1300px) {
-  body {
-    width: 100%;
-  }
-  main {
-    width: 100%;
-  }
-  .login-cointainer {
-    width: 100%;
+@media screen and (max-width: 720px) {
+  main{
+    padding: 0px 4px;
     box-sizing: border-box;
+  }
+  .login-cointainer{
+    padding: 20px 10px;
+  }
+  form{
+    padding: 0;
+  }
+  .title h1{
+    font-size: 20px;
+  }
+  .title p{
+    font-size: 18px;
+  }
+  label {
+    font-size: 14px;
+  }
+  input{
+    font-size: 14px;
+  }
+  .login-details {
     display: flex;
     flex-direction: column;
-    gap: 0px;
-    justify-content: center;
-    padding: 0;
-    height: fit-content;
-  }
-  .login-cointainer .title h1 {
-    font-size: 30px;
-    width: 100%;
-  }
-  .image-div {
-    width: 100%;
-    padding: 0;
-  }
-  .image-div img {
-    width: 550px;
-  }
-  .title {
-    width: 100%;
-    margin: 0;
-    padding: 0;
-  }
-  form {
-    width: 100%;
-    padding-top: 0;
-  }
-}
-@media screen and (max-width: 720px) {
-  .login-cointainer .title h1 {
-    font-size: 20px;
-    width: 100%;
-    padding: 0;
-  }
-  main{
-    height: fit-content;
-    height: 100vh;
-  }
-  .image-div {
-    width: 100%;
-    padding: 0;
-    height: fit-content;
-  }
-  .image-div img {
-    width: 100%;
-  }
-  #login-btn {
-    width: 80px;
-    height: 24px;
-    padding: 4px;
     gap: 10px;
-    border-radius: 25px;
-    opacity: 0px;
-    font-size: 14px;
-    font-weight: 400;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    margin: auto;
   }
-
+  .submit-btn{
+    padding: 15px 10px;
+    box-sizing: border-box;
+  }
 }
