--- a/Public/signup.css
+++ b/Public/signup.css
@@ -32,7 +32,7 @@ main {
 }
 .img-container {
   height: fit-content;
-  background-color: #3e8076;
+  background-color: #3E8076;
   width: 427px;
   height: 732px;
   padding: 24px;
@@ -86,7 +86,7 @@ main {
   gap: 12px;
   border-radius: 25px;
   opacity: 0px;
-  background-color: #3e8076;
+  background-color: #3E8076;
   display: flex;
   flex-direction: column;
   justify-content: space-between;
@@ -121,7 +121,7 @@ main {
 }
 .seconddiv-prof h6 {
   color: #ffffff;
-  font-family: PT Sans;
+  font-family: "Inter", sans-serif;
   font-size: 14px;
   font-weight: 400;
   line-height: 15.53px;
@@ -294,6 +294,11 @@ select {
 }
 label {
   padding: 4px;
+  font-family: "Inter", sans-serif;
+  font-weight: 400;
+  font-size: 10px;
+  line-height: 12.5px;
+  letter-spacing: 0px;
 }
 .error-message {
   color: red;
@@ -412,7 +417,7 @@ input {
 .progress {
   height: 10px;
   width: 33%;
-  background: #3e8076;
+  background: #3E8076;
   border-radius: 5px;
   transition: width 0.3s ease-in-out;
 }
@@ -442,14 +447,14 @@ input {
   display: flex;
   justify-content: space-between;
 }
-.proofAddress input{
+.proofAddress input {
   margin-bottom: 20px;
 }
-.agreement-checkbox{
+.agreement-checkbox {
   display: flex;
   align-items: center;
 }
-#agreeToTerms{
+#agreeToTerms {
   cursor: pointer;
 }
 .spinner {
@@ -486,7 +491,7 @@ input {
 
 /* Toast */
 .toast {
-  font-family: inter;
+  font-family: "Inter", sans-serif;
   position: relative;
   padding: 6px 10px;
   margin-bottom: 10px;
@@ -533,13 +538,13 @@ input {
   background-color: rgba(220, 53, 69, 0.7);
 }
 
-.proofAddress input{
+.proofAddress input {
   height: fit-content;
   width: fit-content;
   border: none;
 }
-.prevbtn{
-  font-family: inter;
+.prevbtn {
+  font-family: "Inter", sans-serif;
   background: none;
   font-style: italic;
   text-decoration: underline;
@@ -593,7 +598,6 @@ input {
   .p2 {
     padding-top: 6px;
   }
-  
 }
 
 @media screen and (max-width: 600px) {
@@ -711,7 +715,7 @@ input {
     width: 100%;
     box-sizing: border-box;
   }
-  .currency-input{
+  .currency-input {
     box-sizing: border-box;
   }
 
@@ -730,26 +734,24 @@ input {
   .contact-no .input-div {
     width: 100%;
   }
-  .ssndv{
+  .ssndv {
     width: 100%;
     box-sizing: border-box;
   }
-  .proofAddress{
+  .proofAddress {
     flex-direction: column;
     width: 100%;
     gap: 10px;
-
-
   }
-  .proofAddress input{
+  .proofAddress input {
     box-sizing: border-box;
     margin-bottom: 20px;
   }
-  #agreeToTerms{
-   width: 18px;
-   height: 18px;
+  #agreeToTerms {
+    width: 18px;
+    height: 18px;
   }
-  .agreement-checkbox{
+  .agreement-checkbox {
     display: flex;
     padding-top: 10px;
     align-items: center;
