--- a/Public/conctact.css
+++ b/Public/conctact.css
@@ -57,10 +57,8 @@ header {
   align-items: center;
   justify-content: center;
   justify-content: space-between;
-  padding: 8.5px 20px;
   box-sizing: border-box;
   background-color: #ffffff;
-  z-index: 99999999999999999999999999999999999999999;
 }
 .header-container {
   width: 100%;
@@ -78,29 +76,29 @@ header {
 .header-nav {
   display: flex;
   flex-direction: row;
-  gap: 6px;
   /* padding-left: 156px;
   padding-right: 336px; */
 }
+
+
 .navs {
   text-decoration: none;
   height: fit-content;
-  padding: 10px;
-  gap: 10px;
   opacity: 0px;
   align-content: center;
   font-family: Inter;
   font-size: 16px;
   font-weight: 400;
-  line-height: 19.36px;
-  text-align: left;
+  text-align: center;
   color: #000000;
 }
 
 .header-nav ul {
   list-style: none;
   display: flex;
-  gap: 25px;
+  gap: 40px;
+  margin: 0;
+  padding: 0;
 }
 
 .header-nav ul li {
@@ -108,6 +106,7 @@ header {
   padding: 0;
   margin: 0;
 }
+
 .newlogin {
   display: none;
 }
@@ -639,7 +638,7 @@ section {
     height: 100vh;
     display: flex;
     flex-direction: column;
-    gap: 150px;
+    gap: 100px;
     padding-left: 30px;
     padding-top: 30px;
   }
@@ -650,6 +649,7 @@ section {
     top: 0;
     right: 0;
     display: none;
+    z-index: 5000;
   }
   .navbar.active {
     display: block;
@@ -661,7 +661,7 @@ section {
     width: 100%;
     box-sizing: border-box;
     background-color: #ffffff;
-    height: 60px;
+    height: fit-content;
   }
   #mobile-listnav ul,
   li,
