--- a/Public/style.css
+++ b/Public/style.css
@@ -63,7 +63,6 @@ header {
   align-items: center;
   justify-content: center;
   justify-content: space-between;
-  padding: 8.5px 20px 8.5px 20px;
   box-sizing: border-box;
   background-color: #ffffff;
 }
@@ -83,33 +82,29 @@ header {
 .header-nav {
   display: flex;
   flex-direction: row;
-  gap: 6px;
   /* padding-left: 156px;
   padding-right: 336px; */
 }
+
+
 .navs {
   text-decoration: none;
-  height: 39px;
-  padding: 10px;
-  gap: 10px;
+  height: fit-content;
   opacity: 0px;
   align-content: center;
   font-family: Inter;
   font-size: 16px;
   font-weight: 400;
-  line-height: 19.36px;
-  text-align: left;
+  text-align: center;
   color: #000000;
-}
-header nav {
-  padding: 15px 30px;
-  border-radius: 8px;
 }
 
 .header-nav ul {
   list-style: none;
   display: flex;
-  gap: 25px;
+  gap: 40px;
+  margin: 0;
+  padding: 0;
 }
 
 .header-nav ul li {
@@ -990,20 +985,12 @@ footer {
   }
 
   .drop-logo img {
-    width: 200px;
+    height: 50px;
+    width: 90px;
   }
   #nav-cancel img {
     width: 26px;
     height: 26px;
-  }
-  .navbar {
-    background-color:#3E8076;
-    width: 30%;
-    position: fixed;
-    z-index: 9999999999999999999999999999999999999999999999999999999;
-    top: 0;
-    right: 0;
-    display: none;
   }
   .navbar.active {
     display: block;
@@ -1015,7 +1002,7 @@ footer {
     width: 100%;
     box-sizing: border-box;
     background-color: #ffffff;
-    height: 70px;
+    height: fit-content;
   }
   #mobile-listnav ul,
   li,
@@ -1427,15 +1414,6 @@ footer {
   .navbar.active {
     display: block;
   }
-  .drop-logo {
-    display: flex;
-    justify-content: space-between;
-    padding: 10px;
-    width: 100%;
-    box-sizing: border-box;
-    background-color: #ffffff;
-    height: 60px;
-  }
   #mobile-listnav ul,
   li,
   .navs {
@@ -1738,18 +1716,7 @@ footer {
     width: 150px;
     height: 200px;
   }
-  .drop-logo {
-    display: flex;
-    justify-content: space-between;
-    padding: 10px;
-    width: 100%;
-    box-sizing: border-box;
-    background-color: #ffffff;
-    height: 40px;
-  }
-  .drop-logo img {
-    width: 150px;
-  }
+
   #mobile-listnav ul,
   li,
   .navs {
