--- a/Public/admin.css
+++ b/Public/admin.css
@@ -63,6 +63,7 @@ button {
   display: flex;
   justify-content: center;
   color: #ffffff;
+  font-family: inter;
 }
 .sign-out button {
   color: #ffffff;
